--- a/dx_app_code/parliament2/dxapp.json
+++ b/dx_app_code/parliament2/dxapp.json
@@ -7,7 +7,7 @@
     "WGS"
   ],
   "dxapi": "1.0.0",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "inputSpec": [
     {
       "name": "illumina_bam",
@@ -139,13 +139,6 @@
       "default": false
     },
     {
-      "name": "output_log_files",
-      "label": "Output Log Files?",
-      "help": "If selected, log files (if applicable) will be uploaded as output. Currently only implemented for Breakseq and Manta.",
-      "class": "boolean",
-      "default": true
-    },
-    {
       "name": "run_genotype_candidates",
       "label": "Genotype Candidates?",
       "help": "If selected, candidate events determined from the individual callers will be genotyped and merged to create a consensus output.",
@@ -200,14 +193,6 @@
       "class": "file",
       "patterns": ["*.tar.gz"],
       "optional": true
-    },
-    {
-      "name": "log_files",
-      "label": "Log Files",
-      "help": "(Optional) Log files for structural variant callers.",
-      "class": "file",
-      "patterns": ["*.txt"],
-      "optional": true
     }
   ],
   "runSpec": {
@@ -235,16 +220,16 @@
       "doi:10.1186/s12864-015-1479-3"
     ],
     "upstreamAuthor": "Baylor College of Medicine",
-    "whatsNew": "* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
+    "whatsNew": "* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
   },
   "regionalOptions": {
     "aws:us-east-1": {
       "assetDepends": [
         {
-          "project": "project-FBbG4280Qg43bZJ1Jyyk8F8v",
+          "project": "project-FBbQqQj026K9PF53332ZFBB9",
           "folder": "/",
           "version": "0.0.1",
-          "name": "parliament2"
+          "name": "parliament2:0.1.7"
         }
       ],
       "systemRequirements": {
@@ -259,7 +244,7 @@
           "project": "project-FBbQqG895xZxxGFV3281QqqY",
           "folder": "/",
           "version": "0.0.1",
-          "name": "parliament2:0.0.1"
+          "name": "parliament2:0.1.7"
         }
       ],
       "systemRequirements": {
@@ -269,5 +254,5 @@
       }
     }
   },
-  "openSource": false
+  "openSource": true
 }
