--- a/dx_app_code/parliament2/dxapp.json
+++ b/dx_app_code/parliament2/dxapp.json
@@ -236,15 +236,15 @@
       "doi:10.1186/s12864-015-1479-3"
     ],
     "upstreamAuthor": "Baylor College of Medicine",
-    "whatsNew": "* 0.1.8: Add upload of log files, update SURVIVOR version.\n* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
+    "whatsNew": "* 0.1.8: Add optional upload of log files; update SURVIVOR; add quality scores; improved error messaging; bug fixes.\n* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
   },
   "regionalOptions": {
     "aws:us-east-1": {
       "assetDepends": [
         {
-          "project": "project-FBbG4280Qg43bZJ1Jyyk8F8v",
+          "project": "project-FBbQqQj026K9PF53332ZFBB9",
           "folder": "/",
-          "name": "parliament2",
+          "name": "parliament2:0.1.8",
           "version": "0.0.1"
         }
       ],
@@ -260,7 +260,7 @@
           "project": "project-FBbQqG895xZxxGFV3281QqqY",
           "folder": "/",
           "version": "0.0.1",
-          "name": "parliament2:0.1.7"
+          "name": "parliament2:0.1.8"
         }
       ],
       "systemRequirements": {
