Update Baylor version with v0.1.8 changes (#16)
* Adding default options for modules to run when none specified. Refining quality scores

* Adding SV caller versions

* Cleaning up code, re-adding VCF headers

* Improved error messaging

* Update stylizing of svviz

--- a/dx_app_code/parliament2/dxapp.json
+++ b/dx_app_code/parliament2/dxapp.json
@@ -162,16 +162,16 @@
     },
     {
       "name": "run_svviz",
-      "label": "Run SVVIZ?",
-      "help": "If selected, visualizations of genotyped SV events will be produced with SVVIZ, one screenshot of support per event. For this option to take effect, Genotype Candidates must be set to True.",
+      "label": "Run svviz?",
+      "help": "If selected, visualizations of genotyped SV events will be produced with svviz, one screenshot of support per event. For this option to take effect, Genotype Candidates must be set to True.",
       "class": "boolean",
       "default": false,
       "group": "Genotyping and Visualization"
     },
     {
       "name": "svviz_only_validated_candidates",
-      "label": "Restrict SVVIZ to Validated Candidates",
-      "help": "Run SVVIZ only on validated candidates? For this option to be relevant, Run SVVIZ must be set to True. Setting to False will make the SVVIZ component run longer.",
+      "label": "Restrict svviz to Validated Candidates",
+      "help": "Run svviz only on validated candidates? For this option to be relevant, Run svviz must be set to True. Setting to False will make the svviz component run longer.",
       "class": "boolean",
       "default": true,
       "group": "Genotyping and Visualization"
@@ -210,8 +210,8 @@
     },
     {
       "name": "svviz_outputs",
-      "label": "SVVIZ Visualizations",
-      "help": "(Optional) Visualizations generated with SVVIZ on validated SV calls.",
+      "label": "svviz Visualizations",
+      "help": "(Optional) Visualizations generated with svviz on validated SV calls.",
       "class": "file",
       "patterns": ["*.tar.gz"],
       "optional": true
@@ -233,7 +233,7 @@
     {
       "name": "log_files",
       "label": "Log files",
-      "help": "(Optional) Output log files from BreakSeq, Manta, and svtyper-sso.",
+      "help": "(Optional) Output log files from BreakSeq and Manta.",
       "class": "array:file",
       "patterns": ["*.log"],
       "optional": true
@@ -264,13 +264,13 @@
       "doi:10.1186/s12864-015-1479-3"
     ],
     "upstreamAuthor": "Baylor College of Medicine",
-    "whatsNew": "* 0.1.8: Add upload of log files, update SURVIVOR version.\n* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
+    "whatsNew": "* 0.1.8: Add optional upload of log files; update SURVIVOR; add quality scores; improved error messaging; bug fixes.\n* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
   },
   "regionalOptions": {
     "aws:us-east-1": {
       "assetDepends": [
         {
-          "project": "project-FBbG4280Qg43bZJ1Jyyk8F8v",
+          "project": "project-FBbQqQj026K9PF53332ZFBB9",
           "folder": "/",
           "name": "parliament2_ccdg",
           "version": "0.0.1"
@@ -288,7 +288,7 @@
           "project": "project-FBbQqG895xZxxGFV3281QqqY",
           "folder": "/",
           "version": "0.0.1",
-          "name": "parliament2:0.1.7"
+          "name": "parliament2:0.1.8"
         }
       ],
       "systemRequirements": {
