--- a/dx_app_code/parliament2/dxapp.json
+++ b/dx_app_code/parliament2/dxapp.json
@@ -225,6 +225,13 @@
       "optional": true
     },
     {
+      "name": "realigned_bam",
+      "label": "Indel Realigned BAM",
+      "help": "The BAM file produced by GATK IndelRealigner.",
+      "class": "file",
+      "optional": true
+    },
+    {
       "name": "atlas_output",
       "label": "Atlas Output Files",
       "help": "Output from xAtlas.",
