--- a/dx_app_code/parliament2/dxapp.json
+++ b/dx_app_code/parliament2/dxapp.json
@@ -270,9 +270,9 @@
     "aws:us-east-1": {
       "assetDepends": [
         {
-          "project": "project-FBbQqQj026K9PF53332ZFBB9",
+          "project": "project-FBbG4280Qg43bZJ1Jyyk8F8v",
           "folder": "/",
-          "name": "parliament2_ccdg",
+          "name": "parliament2",
           "version": "0.0.1"
         }
       ],
