Fix lumpy config file

--- a/resources/home/dnanexus/lumpy-sv/bin/lumpyexpress.config
+++ b/resources/home/dnanexus/lumpy-sv/bin/lumpyexpress.config
@@ -5,7 +5,7 @@ HEXDUMP=/usr/bin/hexdump
 SAMBLASTER=/usr/bin/samblaster
 SAMBAMBA=/usr/bin/sambamba
 SAMTOOLS=/usr/bin/samtools
-PYTHON=/usr/bin/python
+PYTHON=`which python || true`
 
 PAIREND_DISTRO=/home/dnanexus/lumpy-sv//scripts/pairend_distro.py
 BAMGROUPREADS=/home/dnanexus/lumpy-sv//scripts/bamkit/bamgroupreads.py
