--- a/dx_app_code/parliament2/dxapp.json
+++ b/dx_app_code/parliament2/dxapp.json
@@ -182,20 +182,6 @@
       "group": "Genotyping and Visualization"
     },
     {
-      "name": "run_atlas",
-      "label": "Run xAtlas?",
-      "help": "If selected, xAtlas will be run as a SNP and Indel caller.",
-      "class": "boolean",
-      "default": true
-    },
-    {
-      "name": "run_stats",
-      "label": "Run Stats??",
-      "help": "If selected, samtools flagstat will be run to gather statistics on the input BAM file.",
-      "class": "boolean",
-      "default": true
-    },
-    {
       "name": "run_svviz",
       "label": "Run svviz?",
       "help": "If selected, visualizations of genotyped SV events will be produced with svviz, one screenshot of support per event. For this option to take effect, Genotype Candidates must be set to True.",
@@ -214,7 +200,7 @@
     {
       "name": "output_log_files",
       "label": "Output Log Files",
-      "help": "If BreakSeq, Manta, or SVTyper with Breakdancer, Delly, Lumpy, or Manta have been chosen to run, this will upload the resultant log files to the project.",
+      "help": "This will upload the log files resulting from the SV callers (with the exception of Breakdancer) and SVVIZ to the project.",
       "class": "boolean",
       "default": true,
       "group": "Advanced"
@@ -249,20 +235,6 @@
       "help": "(Optional) Visualizations generated with svviz on validated SV calls.",
       "class": "file",
       "patterns": ["*.tar.gz"],
-      "optional": true
-    },
-    {
-      "name": "atlas_output",
-      "label": "Atlas Output Files",
-      "help": "Output from xAtlas.",
-      "class": "array:file",
-      "optional": true
-    },
-    {
-      "name": "align_stats_output",
-      "label": "Align stats file",
-      "help": "Output from samtools flagstat.",
-      "class": "array:file",
       "optional": true
     },
     {
