--- a/dx_app_code/parliament2_hgsc/dxapp.json
+++ b/dx_app_code/parliament2_hgsc/dxapp.json
@@ -277,7 +277,7 @@
   ],
   "runSpec": {
     "file": "parliament2.py",
-    "release": "14.04",
+    "release": "16.04",
     "interpreter": "python2.7",
     "timeoutPolicy": {
       "main": {
@@ -300,18 +300,10 @@
       "doi:10.1186/s12864-015-1479-3"
     ],
     "upstreamAuthor": "Baylor College of Medicine",
-    "whatsNew": "* 0.1.8: Add optional upload of log files; update SURVIVOR; add quality scores; improved error messaging; bug fixes.\n* 0.1.7: Update CNVnator, SVTyper; bug fixes.\n* 0.1.6: Bug fixes.\n* 0.1.5: Dockerized Parliament2.\n* 0.1.0: Adding Parliament2."
+    "whatsNew": "* 1.0.0: Adding HGSC version of Parliament2."
   },
   "regionalOptions": {
     "aws:us-east-1": {
-      "assetDepends": [
-        {
-          "project": "project-FBbG4280Qg43bZJ1Jyyk8F8v",
-          "folder": "/",
-          "name": "parliament2_hgsc",
-          "version": "0.0.1"
-        }
-      ],
       "systemRequirements": {
         "*": {
           "instanceType": "mem1_ssd1_x16"
