--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
   PATH=/snap/bin:$PATH
 
 before_install:
+  - tar -czvf resources/ resources.tar.gz
   - docker build -t dnanexus/parliament2:$TAG .
 
 script:
