--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   PATH=/snap/bin:$PATH
 
 before_install:
-  - tar -czvf resources.tar.gz resources/
+  - tar -czf resources.tar.gz resources/
   - docker build -t dnanexus/parliament2:$TAG .
 
 script:
