Adding separate test scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,7 @@ jobs:
     - stage: test docker build
       script: docker run dnanexus/parliament2:$TAG -h
     - stage: small tests
-      script: 
-        dx login --token $DX_AUTH_TOKEN --noprojects
-        # Download small input BAM and index
-        dx download file-By3JP400k0B037Jpv1Jq856f -o small_input.bam
-        dx download file-Bzp2vG80X3VQv24XgQx0Qy1J -o small_input.bai
-        # Download reference FASTA and index
-        dx download file-B6ZY7VG2J35Vfvpkj8y0KZ01 -o ref.fa.gz
-        dx download file-ByGVY4j04Y0YJ0yJpj0f8qPG -o ref.fa.fai
-        docker run dnanexus/parliament2:$TAG --bam small_input.bam --ref_genome ref.fa.gz --prefix breakdancer --breakdancer 
+      script: test_scripts/small_test.sh
     - stage: dnanexus tests (hg002)
       script: echo "hello"
   # - docker run -v $PWD:/workdir -w /workdir -e DX_API_TOKEN=$DX_API_TOKEN dnanexus/dxda:$TAG download -max_threads=`nproc` test_files/single_file.manifest.json.bz2
