--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,10 @@ services:
   - docker
 
 env:
-  SHORT_COMMIT=`echo $TRAVIS_COMMIT | cut -c1-7`
-  CURRENT_DATE=`date '+%Y%m%d%H%M%S'`
-  TAG="${CURRENT_DATE}_${SHORT_COMMIT}"
-  PATH=/snap/bin:$PATH
-
-before_install:
+  - SHORT_COMMIT=`echo $TRAVIS_COMMIT | cut -c1-7`
+  - CURRENT_DATE=`date '+%Y%m%d%H%M%S'`
+  - TAG="${CURRENT_DATE}_${SHORT_COMMIT}"
+  - PATH=/snap/bin:$PATH
   - tar -czf resources.tar.gz resources/
   - docker build -t dnanexus/parliament2:$TAG .
   - wget https://wiki.dnanexus.com/images/files/dx-toolkit-current-ubuntu-14.04-amd64.tar.gz
@@ -24,9 +22,6 @@ jobs:
       script: test_scripts/small_test.sh
     - stage: dnanexus tests (hg002)
       script: echo "hello"
-  # - docker run -v $PWD:/workdir -w /workdir -e DX_API_TOKEN=$DX_API_TOKEN dnanexus/dxda:$TAG download -max_threads=`nproc` test_files/single_file.manifest.json.bz2
-  # # If all the tests pass, push the docker image and create a release
-  # - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
   # deploy dx-toolkit
 # - wget https://wiki.dnanexus.com/images/files/dx-toolkit-current-ubuntu-14.04-amd64.tar.gz
