--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_install:
 jobs:
   include:
     script:
-      - docker run dnanexus/parliament2:$TAG -h
-      - sudo bash test_scripts/small_test.sh
+      - docker run dnanexus/parliament2:$TAG -q -h
+      - bash test_scripts/small_test.sh
       - echo "hello"
 
   # deploy dx-toolkit
