--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   PATH=/snap/bin:$PATH
 
 before_install:
-  - apt-get update && apt-get install --only-upgrade openssl
+  - sudo apt-get update && sudo apt-get install --only-upgrade openssl
   - tar -czf resources.tar.gz resources/
   - docker build -t dnanexus/parliament2:$TAG .
 
