--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 before_install:
   - sudo apt-get update && sudo apt-get install --only-upgrade openssl
-  - sudo pip install urllib3[secure]
+  - sudo pip install --user urllib3[secure] --upgrade
   - tar -czf resources.tar.gz resources/
   - docker build -t dnanexus/parliament2:$TAG .
 
