Moving to separate scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,16 @@ before_install:
 jobs:
   include:
     - script: docker run dnanexus/parliament2:$TAG -q -h
-    - stage: test on small BAM
-      script: 
-        - sudo bash test_scripts/breakdancer_test.sh
-        - sudo bash test_scripts/breakseq_test.sh
-        - sudo bash test_scripts/cnvnator_test.sh
-        - sudo bash test_scripts/delly_deletion_test.sh
-        - sudo bash test_scripts/delly_duplication_test.sh
-        - sudo bash test_scripts/delly_insertion_test.sh
-        - sudo bash test_scripts/delly_inversion_test.sh
-        - sudo bash test_scripts/lumpy_test.sh
-        - sudo bash test_scripts/manta_test.sh
-        - sudo bash test_scripts/full_small_test.sh
+    - script: sudo bash test_scripts/breakdancer_test.sh
+    - script: sudo bash test_scripts/breakseq_test.sh
+    - script: sudo bash test_scripts/cnvnator_test.sh
+    - script: sudo bash test_scripts/delly_deletion_test.sh
+    - script: sudo bash test_scripts/delly_duplication_test.sh
+    - script: sudo bash test_scripts/delly_insertion_test.sh
+    - script: sudo bash test_scripts/delly_inversion_test.sh
+    - script: sudo bash test_scripts/lumpy_test.sh
+    - script: sudo bash test_scripts/manta_test.sh
+    - script: sudo bash test_scripts/full_small_test.sh
     - stage: test on large BAM
       script: echo "hello"
 
